用自带中间件实现用户登陆、退出

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,10 @@
             margin-bottom: 8px;
         }
 
+        .form-control {
+            border: none;
+        }
+
         {% block style %}
 
         {% endblock %}
@@ -35,7 +39,7 @@
 <main>
     <div class="container-fluid">
         <div class="row">
-            <div class="main col-xl-6 col-xl-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+            <div class="main col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
                 {% block content %}
                 {% endblock %}
             </div>
