--- a/templates/account/login2.html
+++ b/templates/account/login2.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    登陆
+    用户登陆
 {% endblock %}
 
 {% block content %}
@@ -11,11 +11,11 @@
         <p>输入用户名和密码</p>
         <form class="form-horizontal" action="{% url 'account:user_login' %}" method="post">
             {% csrf_token %}
-            <div class="form-control">
+            <div class="form-group">
                 <label class="col-xs-5 control-label">用户名：</label>
                 <div class="col-xs-6 text-left">{{ form.username }}</div>
             </div>
-            <div class="form-control">
+            <div class="form-group">
                 <label class="col-xs-5 control-label">密　码：</label>
                 <div class="col-xs-6 text-left">{{ form.password }}</div>
             </div>
