增加用户密码修改、重置功能

--- a/templates/account/login2.html
+++ b/templates/account/login2.html
@@ -9,17 +9,21 @@
     <div class="row text-center">
         <h1>登录</h1>
         <p>输入用户名和密码</p>
-        <form class="form-horizontal" action="{% url 'account:user_login' %}" method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label class="col-xs-5 control-label">用户名：</label>
-                <div class="col-xs-6 text-left">{{ form.username }}</div>
-            </div>
-            <div class="form-group">
-                <label class="col-xs-5 control-label">密　码：</label>
-                <div class="col-xs-6 text-left">{{ form.password }}</div>
-            </div>
-            <input type="submit" class="btn btn-primary btn-lg" value="登录">
+        {% if next %}
+            <form class="form-horizontal" action="{% url 'account:user_login' %}?next={{ next }}" method="post">
+        {% else %}
+            <form class="form-horizontal" action="{% url 'account:user_login' %}" method="post">
+        {% endif %}
+        {% csrf_token %}
+        <div class="form-group">
+            <label class="col-xs-5 control-label">用户名：</label>
+            <div class="col-xs-6 text-left">{{ form.username }}</div>
+        </div>
+        <div class="form-group">
+            <label class="col-xs-5 control-label">密　码：</label>
+            <div class="col-xs-6 text-left">{{ form.password }}</div>
+        </div>
+        <input type="submit" class="btn btn-primary btn-lg" value="登录">
         </form>
     </div>
 {% endblock %}
