--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 </main>
 {% include 'footer.html' %}
 {% block javascript %}
-    <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 {% endblock %}
 </body>
