--- a/templates/header.html
+++ b/templates/header.html
@@ -11,8 +11,19 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
-                    <li><a href="#">{{ user.username }}</a></li>
-                    <li><a href="{% url 'account:user_logout' %}">退出</a></li>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu"
+                                data-toggle="dropdown">
+                            {{ user.username }}
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="{% url 'account:password_change' %}">修改密码</a></li>
+                            <li><a href="{% url 'account:password_reset' %}">重置密码</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li><a href="{% url 'account:user_logout' %}">退出</a></li>
+                        </ul>
+                    </div>
                 {% else %}
                     <li><a href="{% url 'account:user_login' %}">登陆</a></li>
                 {% endif %}
