完成用户密码重置功能，完美用户的model

--- a/templates/account/login2.html
+++ b/templates/account/login2.html
@@ -25,5 +25,7 @@
         </div>
         <input type="submit" class="btn btn-primary btn-lg" value="登录">
         </form>
+        <div class="row"></div>
+        <p>忘记密码怎么办：<a href="{% url 'account:password_reset' %}">重置密码</a></p>
     </div>
 {% endblock %}
