--- a/templates/account/password_change_form.html
+++ b/templates/account/password_change_form.html
@@ -21,7 +21,7 @@
                 <div class="col-xs-6 text-left">{{ form.new_password1 }}</div>
             </div>
             <div class="form-group">
-                <label class="col-xs-5 control-label text-right">确诊新密码：</label>
+                <label class="col-xs-5 control-label text-right">确认新密码：</label>
                 <div class="col-xs-6 text-left">{{ form.new_password2 }}</div>
             </div>
             <input type="submit" class="btn btn-primary btn-lg" value="确认修改">
