--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}
+    重置密码 - 发送邮件
+{% endblock %}
+
+{% block content %}
+    <div class="row text-center vertical-middle-sm">
+        <h1>重置密码</h1>
+        <p>到你的邮箱收邮件，然后按时邮件说明重置密码。</p>
+    </div>
+{% endblock %}
