--- a/templates/account/password_reset_form.html
+++ b/templates/account/password_reset_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    重置密码
+    重置密码 - 开始
 {% endblock %}
 
 {% block content %}
@@ -10,10 +10,10 @@
         <form class="form-horizontal" action="." method="post">
             {% csrf_token %}
             <div class="form-group-lg">
-                <label class="col-xs-5 control-label text-right">注册使用的邮箱：</label>
-                <div class="col-xs-6 text-left">{{ form.email }}</div>
+                <label class="col-xs-4 offset-xs-2 control-label text-right">注册使用的邮箱：</label>
+                <div class="col-xs-4 text-left">{{ form.email }}</div>
             </div>
-            <input type="submit" class="btn btn-primary btn-lg" value="重置密码">
+            <input type="submit" class="col-xs-2 btn btn-primary" value="重置密码">
         </form>
     </div>
 {% endblock %}
