--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -26,7 +26,7 @@
                 <div class="col-xs-6 text-left">{{ form.password }}</div>
             </div>
             <div class="form-group">
-                <label class="col-xs-5 control-label">确诊密码</label>
+                <label class="col-xs-5 control-label">确认密码</label>
                 <div class="col-xs-6 text-left">{{ form.password2 }}</div>
             </div>
             <input type="submit" class="btn btn-primary btn-lg" value="立即注册">
