--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                     <div class="dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu"
+                        <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenu"
                                 data-toggle="dropdown">
                             {{ user.username }}
                             <span class="caret"></span>
